# gauss_ase

./: .gitignore  README.md  pyproject.toml
gs/: calculator.py  cli.py  files.py  log.py
gs/cli/: calculate.py  calculation.py  file.py  file_handle.py  status.py
gs/pipeline/: __init__.py  calculate.py  calculator.py  enums.py  extract.py  file_handler.py  gaussian.py  model.py  orca.py  prepare.py  utils.py
gs/template/: hpc_slurm.py
gs/utils/: log.py  meta_file.py
